Cambiado vistas, para el layout y la zona de index

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,47 @@
 script(src="/javascripts/jquery-1.7.2.min.js")
-script(src="/javascripts/view.index.js")
+//script(src="/javascripts/view.index.js")
 
-h2 Articulos
-  ul#articulo
-  label(for="new-articulo") Añadir nuevo artículo:
-  textarea#new-articulo
-  a(id='add-new-articulo', href='#') Añadir
+h2
+  a(href="#", id="intro") Introduction
+
+p Hello and welcome to <strong>Warped</strong>, a dark, fluid template created by <a href="http://www.sixshootermedia.com">Six Shooter Media</a>. Warped is a simple template making use of standard features; a header, a navigation area, and side column, a main column and a footer. Pink and grey make up the colour scheme it the template aesthetics were inspired by the song 'Warped' by the Red Hot Chili Peppers.
+
+div.details
+  p Posted by <a href="#">User Name</a> on <a href="#">01.01.01.</a> There are <a href="#">25 Comments</a>.
+
+h2 
+  a(href="#", id="about") About the Author
+
+p Hi! My names Jay and I'm a 20 year old web designer from England. My main projects are conducted through my website <a href="http://www.sixshootermedia.com">Six Shooter Media</a>, but I (obviously) also enjoy creating Open Source web templates for general use! You can keep a check on my free templates <a href="http://www.sixshootermedia.com/free-templates/">here</a> which is probably a link worth bookmarking as my templates appear there a couple of weeks before OWD/OSWD due to the design queues.
+
+div.details
+  p Posted by <a href="#">User Name</a> on <a href="#">01.01.01.</a> There are <a href="#">25 Comments</a>.
+
+h2
+  a(href="#", id="examples") Some Examples
+
+p OK, here I'll just put some example html elements that you will most probably be using in your blog.
+
+h3 Blockquote Example!
+
+blockquote
+  p
+    em My tendency<br />For dependency<br />Is offending me<br />It's up-ending me<br />I'm pretending see<br />To be strong and free<br />From my dependency<br />It's warping me
+
+h3 List Example!
+
+ul
+  li Here
+  li Is our friend
+  li The list!
+
+h3 Image Example!
+p
+  img(src="http://www.sixshootermedia.com/ssm2/wp-content/themes/Six%20Shooter%20Media/images/logo.jpg",alt="")
+
+
+//h2 Articulos
+//  ul#articulo
+//  label(for="new-articulo") Añadir nuevo artículo:
+//  textarea#new-articulo
+//  a(id='add-new-articulo', href='#') Añadir
